--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,34 @@
   "description": "Backend API for logs",
   "main": "src/server.js",
   "scripts": {
-    "dev":"nodemon src/server.js",
-    "start": "node src/server.js"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
+    "test:base": "NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
+    "test": "AUDIT_LOG_CONSOLE=false npm run test:base",
+    "test:verbose": "AUDIT_LOG_CONSOLE=true npm run test:base",
+    "test:coverage": "AUDIT_LOG_CONSOLE=false node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --coverage --coverageProvider=v8 --coverageDirectory=./coverage",
+    "migrate:create": "node-pg-migrate create -m migrations",
+    "migrate:up:dev": "node-pg-migrate up -m migrations -d DATABASE_URL",
+    "migrate:down:dev": "node-pg-migrate down -m migrations -d DATABASE_URL",
+    "migrate:up:test": "node-pg-migrate up -m migrations -d DATABASE_URL_TEST",
+    "migrate:down:test": "node-pg-migrate down -m migrations -d DATABASE_URL_TEST",
+    "test:resetdb": "NODE_ENV=test node scripts/test-db-reset.js",
+    "test:clean": "npm run test:resetdb && npm test",
+    "dev:auth:smoke": "node scripts/dev-auth-smoke.js",
+    "wipe:db": "node scripts/wipe-db.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "node-pg-migrate": "^8.0.4",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "jest": "^30.2.0",
+    "nodemon": "^3.1.11",
+    "supertest": "^7.1.4"
   }
 }
