--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,8 @@
     "node-pg-migrate": "^8.0.4",
     "pg": "^8.16.3",
     "pino": "^9.4.0",
-    "pino-http": "^9.0.0"
+    "pino-http": "^9.0.0",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
     "jest": "^30.2.0",
