--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -15,11 +15,7 @@
     "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@types/node": "^25.0.1",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
     "eslint": "^9.39.2",
-    "eslint-config-next": "^16.0.10",
-    "typescript": "^5.9.3"
+    "eslint-config-next": "^16.0.10"
   }
 }
